Fix css bug related to body height - For some reason semantic-ui causes the html body to be   taller than the window, which introduces a scrollbar   even when the content is well within the window - I'm not sure what causes this, but styling body to have   height: inherit seems to fix the isusue without side   effects.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,6 @@
+html {
+  height: inherit;
+}
 
 i.icon {
   font-size: 2em;
